--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "3"
-members = ["openal_stats_generator", "openal_stats_viewer"]
+members = [ "openal_stats_common","openal_stats_generator", "openal_stats_viewer"]
