--- a/openal_stats_common/Cargo.toml
+++ b/openal_stats_common/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+postcard = "1.1.1"
+serde = "1.0.218"
 strum = { version = "0.27.1", features = ["derive"] }
