--- a/openal_stats_generator/Cargo.toml
+++ b/openal_stats_generator/Cargo.toml
@@ -16,3 +16,4 @@ lazy_static = "1.5.0"
 libloading = "0.8.6"
 ouroboros = "0.18.5"
 openal_stats_common = { path = "../openal_stats_common"}
+postcard = { version = "1.1.1", features = ["use-std"] }
