--- a/openal_stats_viewer/Cargo.toml
+++ b/openal_stats_viewer/Cargo.toml
@@ -9,4 +9,4 @@ interprocess = { version = "2.2.2", features = ["tokio"] }
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-util = "0.7.13"
 openal_stats_common = { path = "../openal_stats_common"}
-postcard = { version = "1.1.1", features = ["use-std"] }
+postcard = "1.1.1"
