--- a/openal_stats_viewer/Cargo.toml
+++ b/openal_stats_viewer/Cargo.toml
@@ -1,6 +1,10 @@
 [package]
 name = "openal_stats_viewer"
 version = "0.1.0"
+description = "OpenAL stats visualizer"
+publish = false
+authors = ["LAGonauta <lagonauta@gmail.com>"]
+build = "build.rs"
 edition = "2024"
 
 [dependencies]
@@ -10,3 +14,7 @@ tokio = { version = "1.43.0", features = ["full"] }
 tokio-util = "0.7.13"
 openal_stats_common = { path = "../openal_stats_common"}
 postcard = "1.1.1"
+slint = "1.10"
+
+[build-dependencies]
+slint-build = "1.10"
